fixed - #286 Email Module Window Too Wide When Left Sidebar is Open

--- a/themes/SuiteP/css/yui.css
+++ b/themes/SuiteP/css/yui.css
@@ -1335,6 +1335,14 @@ th.yui-dt-hidden, td.yui-dt-hidden {
     background-color: #FFF;
 }
 
+.yui-dt-bd {
+    max-width: 1107px !important;
+}
+.yui-dt-hd {
+    max-width: 1107px !important;
+}
+
+
 /*.yui-dt-scrollable .yui-dt-data tr.yui-dt-last td {
     border-bottom: 1px solid #7F7F7F;
 }*/
@@ -5700,6 +5708,10 @@ div.bodywrapper {
     padding: 0.2em 0.5em;
 }
 
+.yui-navset .yui-navset-top{
+    width: auto;
+}
+
 .yui-layout-unit-center .yui-navset .yui-content, .yui-layout .yui-layout-unit.yui-layout-unit-center div.yui-layout-bd{
     border-style:none;
 }
@@ -6132,4 +6144,35 @@ a.sugar-tab-close, .yui-navset .yui-nav a.sugar-tab-close, .yui-navset .yui-nav 
 
 .yui-layout .yui-layout-clip {
     padding:10px 000;
+}
+
+.yui-layout-noscroll{
+    max-width: 1107px !important;
+}
+
+.yui-layout-unit{
+    max-width: 1107px !important;
+}
+
+.yui-layout-unit-center{
+    max-width: 1107px !important;
+}
+
+.yui-resize{
+    max-width: 1107px !important;
+}
+
+.yui-layout-unit{
+    max-width: 1107px !important;
+}
+.yui-layout-unit-bottom{
+    max-width: 1107px !important;
+}
+
+.yui-layout-scroll{
+    max-width: 1107px !important;
+}
+
+.yui-layout-wrap{
+    max-width: 1120px !important;
 }
